# leadly

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  app.db  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  models.py  oauth.py  views.py
delphi/: __init__.py  app.db  config.py  run.py
delphi/logs/: app.log.1
delphi/oauth/: models.py  oauth.py  views.py
leadly/: __init__.py  config.py  run.py
leadly/oauth/: models.py  oauth.py  views.py
oauth/: models.py  oauth.py  views.py
